# knowledge

./: .gitmodules  README.md
notes/: README.md  sips.md
notes/Kafka/: README.md
notes/c/asm/: Makefile  README.md  embed_asm.c  hello.S
notes/c/dsa/: README
notes/c/gcc_and_make/: README
notes/c/gcc_and_make/autotools/: README.md  configure.ac  configure.scan
notes/c/gcc_and_make/autotools/include/: Makefile  Makefile.am  fuck.h
notes/c/gcc_and_make/autotools/lib/: Makefile  Makefile.am  fuck.c
notes/c/gcc_and_make/autotools/src/: hello.c  makefile.am
notes/c/graphics_and_vision/: README.md
notes/c/kernel_build/: README.md
notes/c/macro_techniques/: Makefile  README.md  basic.c  function.c  lodash.c  string.c
notes/c/reverse_technique/: reverse.md
notes/c/standard_library/: Makefile  README.md  draw.c  draw.h  qsort.c  random.c  va_list.c
notes/c/struct_padding/: Makefile  README  struct.c  test.c
notes/c/system_call/: README.md
notes/c/zlib/: Makefile  README.md  zpipe.c
notes/command-line/: README.md
notes/command-line/shell/: README  array.sh  books.md
notes/command-line/system/: admin.md  basic.md  danger.md  environ.md  filter.md  hard-disk.md  network.md  process.md
notes/docker/: README  README.md
notes/git/: README.md  alias.md  git.md  merge_request.md
notes/license/: README.md
notes/python/: README
notes/python/basic/: README.md  class.py  decorator.py  regular.py
notes/python/black-hat-python/: netcat.py  (+3 more)
notes/software-engineering/: README.md
notes/web/: README.md
side-project/: README.md
utils/: debug.js
(+170 files in other folders)
